k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bovo-admin
  labels:
    name: bovo-admin
    app: bovo-admin
